--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -81,7 +81,8 @@
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "write-file-webpack-plugin": "4.5.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "webpack-extension-reloader": "1.1.4"
   },
   "devDependencies": {
     "react": "^16.8.4",
