--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-browser-extension-scripts",
+  "name": "@ackee/react-scripts-browser-extension",
   "version": "0.1.2",
   "description": "Configuration and scripts for Create React Browser Extension",
   "repository": {
