:ambulance: Add custom dir among included files

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -21,7 +21,8 @@
     "scripts",
     "template",
     "template-typescript",
-    "utils"
+    "utils",
+    "custom"
   ],
   "bin": {
     "react-scripts": "./bin/react-scripts.js"
